# rustlogistica

./: Cargo.toml
src/: api_routes.rs  lib.rs  main.rs
src/base/document/: mod.rs
src/person/: mod.rs  person_controller.rs  person_data.rs  person_routes.rs
